# serializer version: 1
# name: TestChatParallelWebUnit.test_serdes[serialized]
  dict({
    'id': list([
      'langchain_parallel',
      'chat_models',
      'ChatParallelWeb',
    ]),
    'kwargs': dict({
      'api_key': dict({
        'id': list([
          'PARALLEL_API_KEY',
        ]),
        'lc': 1,
        'type': 'secret',
      }),
      'base_url': 'https://api.parallel.ai',
      'max_retries': 2,
      'model': 'speed',
      'model_name': 'speed',
      'output_version': None,
    }),
    'lc': 1,
    'name': 'ChatParallelWeb',
    'type': 'constructor',
  })
# ---
# name: TestChatParallelWebUnitLite.test_serdes[serialized]
  dict({
    'id': list([
      'langchain_parallel',
      'chat_models',
      'ChatParallelWeb',
    ]),
    'kwargs': dict({
      'api_key': dict({
        'id': list([
          'PARALLEL_API_KEY',
        ]),
        'lc': 1,
        'type': 'secret',
      }),
      'base_url': 'https://api.parallel.ai',
      'max_retries': 2,
      'model': 'lite',
      'model_name': 'lite',
      'output_version': None,
    }),
    'lc': 1,
    'name': 'ChatParallelWeb',
    'type': 'constructor',
  })
# ---
